--- a/README.html
+++ b/README.html
@@ -1,3 +1,7 @@
 <!DOCTYPE html>
 <marquee>i don't think i should be able to do this</marquee>
-<script>console.log('hellow')</script>
+<script>
+  setInterval(function() {
+    console.log('hello');
+}, 1000);
+</script>
