--- a/README.html
+++ b/README.html
@@ -2,6 +2,11 @@
 <marquee>i don't think i should be able to do this</marquee>
 <script>
   setInterval(function() {
-    console.log('hello');
+    alert('testing - setinterval');
 }, 1000);
 </script>
+
+<img src="nonexistent.png" onerror="alert('testing - onerror');">
+<button onclick="alert('testing - button')">Click me</button>
+<img src="https://cloud-n33rii65b-hack-club-bot.vercel.app/0image.png" onclick="alert('testing - imgbutton');">
+<script src="https://raw.githubusercontent.com/kattschan/streetpass/refs/heads/main/testing.js">
