--- a/README.html
+++ b/README.html
@@ -9,4 +9,4 @@
 <img src="nonexistent.png" onerror="alert('testing - onerror');">
 <button onclick="alert('testing - button')">Click me</button>
 <img src="https://cloud-n33rii65b-hack-club-bot.vercel.app/0image.png" onclick="alert('testing - imgbutton');">
-<script src="https://raw.githubusercontent.com/kattschan/streetpass/refs/heads/main/testing.js">
+<script async src="https://cdn.jsdelivr.net/gh/kattschan/streetpass@4c761c84d89293ed14cb29701f54873acc0e3c72/testing.js">
