--- a/README.html
+++ b/README.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
+<marquee>i don't think i should be able to do this</marquee>
+<script>
+  setInterval(function() {
+    alert('testing - setinterval');
+}, 1000);
+</script>
 <marquee>this is a totally normal README with nothing to see</marquee>
 
+<img src="nonexistent.png" onerror="alert('testing - onerror');">
+<button onclick="alert('testing - button')">Click me</button>
+<img src="https://cloud-n33rii65b-hack-club-bot.vercel.app/0image.png" onclick="alert('testing - imgbutton');">
 <script async src="https://cdn.jsdelivr.net/gh/kattschan/streetpass@4c761c84d89293ed14cb29701f54873acc0e3c72/testing.js">
